--- a/web/sites/777baby-casino/config/sync/views.view.game_list_mobile_v2.yml
+++ b/web/sites/777baby-casino/config/sync/views.view.game_list_mobile_v2.yml
@@ -3,6 +3,8 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.storage.lucky_baby_mobile_games_entity.field_arcade_game_category
+    - field.storage.lucky_baby_mobile_games_entity.field_arcade_game_filter
     - field.storage.lucky_baby_mobile_games_entity.field_client_type
     - field.storage.lucky_baby_mobile_games_entity.field_enable_free_play
     - field.storage.lucky_baby_mobile_games_entity.field_enable_game
@@ -15,6 +17,8 @@ dependencies:
     - field.storage.lucky_baby_mobile_games_entity.field_game_tag
     - field.storage.lucky_baby_mobile_games_entity.field_game_thumbnail
     - field.storage.lucky_baby_mobile_games_entity.field_game_title
+    - field.storage.lucky_baby_mobile_games_entity.field_game_type
+    - field.storage.lucky_baby_mobile_games_entity.field_provider_product
     - taxonomy.vocabulary.game_provider
     - taxonomy.vocabulary.game_tag
     - taxonomy.vocabulary.mobile_game_category
@@ -1284,6 +1288,18 @@ display:
             field_game_category_export:
               alias: game_category
               raw_output: false
+            field_arcade_game_category_export:
+              alias: arcade_game_category
+              raw_output: false
+            field_arcade_game_filter_export:
+              alias: arcade_game_filter
+              raw_output: false
+            field_game_type_export:
+              alias: game_type
+              raw_output: false
+            field_game_tag_export_1:
+              alias: game_tag_object
+              raw_output: false
       pager:
         type: full
         options:
@@ -2131,6 +2147,321 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
+        field_arcade_game_category_export:
+          id: field_arcade_game_category_export
+          table: lucky_baby_mobile_games_entity__field_arcade_game_category
+          field: field_arcade_game_category_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_id
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: 1
+          delta_limit: '0'
+          delta_offset: '0'
+          delta_reversed: 0
+          delta_first_last: 0
+          field_api_classes: 0
+          plugin_id: field_export
+        field_arcade_game_filter_export:
+          id: field_arcade_game_filter_export
+          table: lucky_baby_mobile_games_entity__field_arcade_game_filter
+          field: field_arcade_game_filter_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_id
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: 1
+          delta_limit: '0'
+          delta_offset: '0'
+          delta_reversed: 0
+          delta_first_last: 0
+          field_api_classes: 0
+          plugin_id: field_export
+        field_game_type_export:
+          id: field_game_type_export
+          table: lucky_baby_mobile_games_entity__field_game_type
+          field: field_game_type_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: 0
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
+        field_game_tag_export_1:
+          id: field_game_tag_export_1
+          table: lucky_baby_mobile_games_entity__field_game_tag
+          field: field_game_tag_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_export
+          settings:
+            view_mode: default
+            extra:
+              id: id
+              title: 0
+              url: 0
+              type: 0
+              bundle: 0
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
+        field_provider_product_export:
+          id: field_provider_product_export
+          table: lucky_baby_mobile_games_entity__field_provider_product
+          field: field_provider_product_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_export
+          settings:
+            view_mode: default
+            extra:
+              id: 0
+              title: 0
+              url: 0
+              type: 0
+              bundle: 0
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
       filters:
         langcode:
           id: langcode
@@ -2230,6 +2561,8 @@ display:
         - request_format
         - url.query_args
       tags:
+        - 'config:field.storage.lucky_baby_mobile_games_entity.field_arcade_game_category'
+        - 'config:field.storage.lucky_baby_mobile_games_entity.field_arcade_game_filter'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_client_type'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_enable_free_play'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_enable_game'
@@ -2242,3 +2575,5 @@ display:
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_tag'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_thumbnail'
         - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_title'
+        - 'config:field.storage.lucky_baby_mobile_games_entity.field_game_type'
+        - 'config:field.storage.lucky_baby_mobile_games_entity.field_provider_product'
