--- a/web/sites/777baby-casino/config/sync/core.entity_form_display.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.default.yml
+++ b/web/sites/777baby-casino/config/sync/core.entity_form_display.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.default.yml
@@ -3,6 +3,9 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_all_games_category
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_arcade_game_category
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_arcade_game_filter
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_client_type
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_enable_free_play
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_enable_game
@@ -15,6 +18,8 @@ dependencies:
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_tag
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_thumbnail
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_title
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_type
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_provider_product
     - image.style.thumbnail
   module:
     - conditional_fields
@@ -29,7 +34,7 @@ third_party_settings:
         - field_game_category
         - field_game_filter
       parent_name: ''
-      weight: 10
+      weight: 12
       format_type: fieldset
       format_settings:
         id: ''
@@ -41,7 +46,7 @@ third_party_settings:
       children:
         - field_game_filter_games
       parent_name: ''
-      weight: 11
+      weight: 13
       format_type: fieldset
       format_settings:
         id: ''
@@ -49,11 +54,42 @@ third_party_settings:
         description: 'fields for games page'
         required_fields: true
       label: 'Games (for games page)'
+    group_arcade_for_arcade_page_:
+      children:
+        - field_arcade_game_category
+        - field_arcade_game_filter
+      parent_name: ''
+      weight: 15
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: false
+      label: 'Arcade (for arcade page)'
 id: lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.default
 targetEntityType: lucky_baby_desktop_games_entity
 bundle: lucky_baby_desktop_games_entity
 mode: default
 content:
+  field_all_games_category:
+    weight: 14
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_arcade_game_category:
+    weight: 14
+    settings: {  }
+    third_party_settings: {  }
+    type: erviews_options_buttons
+    region: content
+  field_arcade_game_filter:
+    weight: 15
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_client_type:
     weight: 6
     settings: {  }
@@ -163,7 +199,7 @@ content:
     type: options_select
     region: content
   field_game_provider:
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -190,6 +226,18 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_game_type:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_provider_product:
+    weight: 16
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   langcode:
     type: language_select
     weight: 2
@@ -198,7 +246,7 @@ content:
       include_locked: true
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
