--- a/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.default.yml
+++ b/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.default.yml
@@ -3,6 +3,9 @@ langcode: ja
 status: true
 dependencies:
   config:
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_all_games_category
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_arcade_game_category
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_arcade_game_filter
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_client_type
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_enable_free_play
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_enable_game
@@ -15,6 +18,8 @@ dependencies:
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_tag
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_thumbnail
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_title
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_type
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_provider_product
   module:
     - image
     - lucky_baby_desktop_games
@@ -25,6 +30,30 @@ targetEntityType: lucky_baby_desktop_games_entity
 bundle: lucky_baby_desktop_games_entity
 mode: default
 content:
+  field_all_games_category:
+    weight: 17
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_arcade_game_category:
+    weight: 14
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_arcade_game_filter:
+    weight: 15
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_client_type:
     weight: 9
     label: above
@@ -124,6 +153,22 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_game_type:
+    weight: 16
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_provider_product:
+    weight: 18
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   name:
     label: above
