--- a/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
+++ b/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default.yml
@@ -1,4 +1,4 @@
-uuid: 9a8a9d42-48c3-4ef4-89ca-762f1979b789
+uuid: 26ee714a-7f86-4c10-b4ab-6b74151b1c76
 langcode: ja
 status: true
 dependencies:
@@ -19,233 +19,162 @@ dependencies:
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_title
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_game_type
     - field.field.lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.field_provider_product
-    - image.style.thumbnail
   module:
-    - conditional_fields
-    - entity_reference_views_select
-    - field_group
     - image
     - lucky_baby_mobile_games
-third_party_settings:
-  field_group:
-    group_for_casino_page:
-      children:
-        - field_game_category
-        - field_game_filter
-      parent_name: ''
-      weight: 11
-      format_type: fieldset
-      format_settings:
-        id: ''
-        classes: ''
-        description: 'fields for casino page'
-        required_fields: true
-      label: 'Casino (for casino page)'
-    group_for_games_page:
-      children:
-        - field_game_filter_games
-      parent_name: ''
-      weight: 12
-      format_type: fieldset
-      format_settings:
-        id: ''
-        classes: ''
-        description: 'fields for games page'
-        required_fields: true
-      label: 'Games (for games page)'
-    group_arcade_for_arcade_page_:
-      children:
-        - field_arcade_game_category
-        - field_arcade_game_filter
-      parent_name: ''
-      weight: 13
-      format_type: fieldset
-      format_settings:
-        id: ''
-        classes: ''
-        description: ''
-        required_fields: false
-      label: 'Arcade (for arcade page)'
+    - options
+    - user
 id: lucky_baby_mobile_games_entity.lucky_baby_mobile_games_entity.default
 targetEntityType: lucky_baby_mobile_games_entity
 bundle: lucky_baby_mobile_games_entity
 mode: default
 content:
   field_arcade_game_category:
-    weight: 14
-    settings: {  }
+    weight: 16
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    type: erviews_options_buttons
+    type: entity_reference_label
     region: content
   field_arcade_game_filter:
-    weight: 15
-    settings: {  }
+    weight: 17
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    type: options_select
+    type: entity_reference_label
     region: content
   field_client_type:
-    weight: 6
+    weight: 9
+    label: above
     settings: {  }
     third_party_settings: {  }
-    type: options_select
+    type: list_default
     region: content
   field_enable_free_play:
-    weight: 8
+    weight: 2
+    label: above
     settings:
-      display_label: true
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: boolean_checkbox
+    type: boolean
     region: content
   field_enable_game:
-    weight: 0
+    weight: 3
+    label: above
     settings:
-      display_label: true
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: boolean_checkbox
+    type: boolean
     region: content
   field_game_category:
-    weight: 13
-    settings: {  }
-    third_party_settings:
-      conditional_fields:
-        0c638649-f23e-4c63-af66-6167c026f2f0:
-          dependee: field_game_provider
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                target_id: '111'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: lucky_baby_mobile_games_entity
-          bundle: lucky_baby_mobile_games_entity
-    type: erviews_options_buttons
+    weight: 14
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_game_code:
-    weight: 4
+    weight: 7
+    label: above
     settings:
-      size: 60
-      placeholder: ''
+      link_to_entity: false
     third_party_settings: {  }
-    type: string_textfield
+    type: string
     region: content
   field_game_code_icore:
-    weight: 5
+    weight: 10
+    label: above
     settings:
-      size: 60
-      placeholder: ''
+      link_to_entity: false
     third_party_settings: {  }
-    type: string_textfield
+    type: string
     region: content
   field_game_filter:
-    weight: 14
-    settings: {  }
-    third_party_settings:
-      conditional_fields:
-        78348e51-095f-4b13-8121-2bbbcf187649:
-          dependee: field_game_provider
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                target_id: '111'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: lucky_baby_mobile_games_entity
-          bundle: lucky_baby_mobile_games_entity
-    type: options_select
+    weight: 17
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_game_filter_games:
-    weight: 15
-    settings: {  }
-    third_party_settings:
-      conditional_fields:
-        67669107-aeda-45d5-83bf-cfafbc3f79be:
-          dependee: field_game_provider
-          settings:
-            state: '!visible'
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                target_id: '111'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: lucky_baby_mobile_games_entity
-          bundle: lucky_baby_mobile_games_entity
-    type: options_select
+    weight: 16
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_game_provider:
-    weight: 10
-    settings: {  }
+    weight: 11
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    type: options_select
+    type: entity_reference_label
     region: content
   field_game_tag:
-    weight: 7
-    settings: {  }
+    weight: 5
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    type: options_select
+    type: entity_reference_label
     region: content
   field_game_thumbnail:
-    weight: 3
+    weight: 6
+    label: above
     settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
+      image_style: ''
+      image_link: ''
     third_party_settings: {  }
-    type: image_image
+    type: image
     region: content
   field_game_title:
-    weight: 1
+    weight: 8
+    label: above
     settings:
-      size: 60
-      placeholder: ''
+      link_to_entity: false
     third_party_settings: {  }
-    type: string_textfield
+    type: string
     region: content
   field_game_type:
-    weight: 9
-    settings: {  }
+    weight: 18
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    type: options_select
+    type: entity_reference_label
     region: content
   field_provider_product:
-    weight: 16
+    weight: 19
+    label: above
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      link: true
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: entity_reference_label
     region: content
-  langcode:
-    type: language_select
-    weight: 2
+  name:
+    label: above
+    type: string
+    weight: 0
     region: content
     settings:
-      include_locked: true
+      link_to_entity: false
     third_party_settings: {  }
-  translation:
-    weight: 10
+  user_id:
+    label: hidden
+    type: author
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  name: true
-  user_id: true
+  langcode: true
