--- a/web/sites/777baby-casino/config/sync/field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_all_games_category.yml
+++ b/web/sites/777baby-casino/config/sync/field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_all_games_category.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.storage.lucky_baby_desktop_games_entity.field_all_games_category
-    - taxonomy.vocabulary.all_games_category
   module:
     - lucky_baby_desktop_games
 id: lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_all_games_category
@@ -20,8 +19,7 @@ default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
   handler_settings:
-    target_bundles:
-      all_games_category: all_games_category
+    target_bundles: {  }
     sort:
       field: name
       direction: asc
