--- a/web/sites/zedbet/config/sync/core.extension.yml
+++ b/web/sites/zedbet/config/sync/core.extension.yml
@@ -42,6 +42,7 @@ module:
   imce: 0
   lang_dropdown: 0
   language: 0
+  language_access: 0
   libraries: 0
   link: 0
   live_dealer_games_config: 0
