fix all games config issue

--- a/web/sites/777baby-casino/config/sync/core.extension.yml
+++ b/web/sites/777baby-casino/config/sync/core.extension.yml
@@ -42,6 +42,7 @@ module:
   link: 0
   locale: 0
   lucky_baby_404: 0
+  lucky_baby_all_games_config: 0
   lucky_baby_big_winner: 0
   lucky_baby_config: 0
   lucky_baby_desktop_block: 0
