Updated Account Forms default configurations

--- a/web/sites/zedbet/config/sync/webcomposer_form_manager.form.account_reset_password_form.header_markup.yml
+++ b/web/sites/zedbet/config/sync/webcomposer_form_manager.form.account_reset_password_form.header_markup.yml
@@ -1,5 +1,5 @@
 field_settings:
-  markup: "<p class=\"page-title-text text-align-center\" style=\"font-size: 20px;\"><strong>PASSWORD RESET REQUEST</strong></p>\r\n\r\n<p class=\"text-body text-align-center\" style=\"font-size: 12px;\">Please provide your new password on the fields below. This will be your new Zedbet password.</p>\r\n"
+  markup: "<p class=\"page-title-text text-align-center\" style=\"font-size: 20px;padding-bottom: 10px;\"><strong>Password Reset Request</strong></p>\r\n\r\n<p class=\"text-body text-align-center\" style=\"font-size: 14px;\">Please provide your new password on the fields below. This will be your new Zedbet password.</p>\r\n"
 field_validations:
   required:
     enable: 0
