--- a/web/sites/zedbet/config/sync/webcomposer_form_manager.form.account_reset_password_form.new_password.yml
+++ b/web/sites/zedbet/config/sync/webcomposer_form_manager.form.account_reset_password_form.new_password.yml
@@ -1,6 +1,6 @@
 field_settings:
-  label: 'NEW PASSWORD'
-  placeholder: 'NEW PASSWORD'
+  label: 'New Password'
+  placeholder: 'New Password'
   annotation: 'Your password should be unique as possible using 6-10 alphanumeric characters. To create a secure password, please avoid using any dictionary words.'
   annotation_weak: 'The password you entered is acceptable by WEAK. Improve your password by using a mixture of uppercase and lowercase letters and numbers.'
   annotation_average: 'The password you entered is AVERAGE. Improve you password by using a mixture of uppercase and lowercase letters and numbers.'
@@ -14,15 +14,15 @@ field_validations:
     parameters:
       spaces: 1
   alphanumeric:
-    enable: 0
-    error_message: 'Field should be alphanumeric'
+    enable: 1
+    error_message: 'Password must contain 6-10 alphanumeric characters only with no special characters and spaces.'
     parameters:
-      spaces: 1
+      spaces: 0
   alpha_multi:
     enable: 1
     error_message: 'Value is not a valid multilingual character'
     parameters:
-      space: 1
+      space: 0
       numeric: 1
       allow: 0
       disallow: 0
