--- a/web/sites/zedbet/config/sync/webcomposer_form_manager.form.account_reset_password_form.verify_password.yml
+++ b/web/sites/zedbet/config/sync/webcomposer_form_manager.form.account_reset_password_form.verify_password.yml
@@ -1,6 +1,6 @@
 field_settings:
-  label: 'CONFIRM NEW PASSWORD'
-  placeholder: 'CONFIRM NEW PASSWORD'
+  label: 'Confirm New Password'
+  placeholder: 'Confirm New Password'
   annotation: ''
 field_validations:
   required:
@@ -15,12 +15,12 @@ field_validations:
     enable: 1
     error_message: 'Password must contain 6-10 alphanumeric characters only with no special characters and spaces.'
     parameters:
-      spaces: 1
+      spaces: 0
   alpha_multi:
     enable: 0
     error_message: 'Value is not a valid multilingual character'
     parameters:
-      space: 1
+      space: 0
       numeric: 1
       allow: 0
       disallow: 0
@@ -77,7 +77,7 @@ field_validations:
     parameters:
       regex_value: ''
   not_match_username:
-    enable: 0
+    enable: 1
     error_message: 'Password should not equal to username'
   verify_password:
     enable: 1
